# InfiniteMonkeyTyper

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: index.html  planningLog.html
include/: Controller.hpp  Model.hpp  ModelInfo.hpp  MonkeyTyper.hpp  MonkeyTyperFactory.hpp  RingLeader.hpp  UserInput.hpp  View.hpp
src/: ModelInfo.cpp  MonkeyTyper.cpp  MonkeyTyperFactory.cpp  RingLeader.cpp
test/: CounterIdMakerTest.cpp  InfoStructTest.cpp  MonkeyTyperFactoryTest.cpp  MonkeyTyperTest.cpp  RingLeaderTest.cpp  mockClasses.cpp  mockClasses.hpp
